--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,6 +107,15 @@
             android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/random" />
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/white"
+            android:contentDescription="image"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/white" />
     </LinearLayout>
     <ImageButton
         android:id="@+id/ib_brush"
